--- a/src/ee/CMakeLists.txt
+++ b/src/ee/CMakeLists.txt
@@ -124,6 +124,7 @@ SET (VOLTDB_SRC
   catalog/function.cpp
   catalog/functionparameter.cpp
   catalog/graphview.cpp
+  catalog/vertexlabel.cpp
   catalog/index.cpp
   catalog/indexref.cpp
   catalog/materializedviewhandlerinfo.cpp
@@ -186,6 +187,7 @@ SET (VOLTDB_SRC
   executors/mergereceiveexecutor.cpp
   executors/mergejoinexecutor.cpp
   executors/migrateexecutor.cpp
+  executors/NestedLoopPathExecutor.cpp
   executors/nestloopexecutor.cpp
   executors/nestloopindexexecutor.cpp
   executors/orderbyexecutor.cpp
@@ -241,6 +243,7 @@ SET (VOLTDB_SRC
   plannodes/mergejoinnode.cpp
   plannodes/mergereceivenode.cpp
   plannodes/migratenode.cpp
+  plannodes/NestedLoopPathNode.cpp
   plannodes/nestloopindexnode.cpp
   plannodes/nestloopnode.cpp
   plannodes/orderbynode.cpp
