Use the most UGLY way to realize FEAT6. 	Every time a DQL is executed, a new graph is built. 	Still need to figure out how voltdb insertions work.

--- a/src/ee/CMakeLists.txt
+++ b/src/ee/CMakeLists.txt
@@ -124,6 +124,7 @@ SET (VOLTDB_SRC
   catalog/function.cpp
   catalog/functionparameter.cpp
   catalog/graphview.cpp
+  catalog/graphviewinfo.cpp
   catalog/subgraph.cpp
   catalog/vertexlabel.cpp
   catalog/edgelabel.cpp
